Fixed text alignment

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -433,6 +433,7 @@ $lightgrey: #f4f4f4;
         margin: 0;
       }
       h2{
+        text-align: center;
         margin: 10px 0;
         color: $red;
       }
